--- a/pur.html
+++ b/pur.html
@@ -49,18 +49,49 @@
     <!-- Project 2 : Modal -->
 
     <!-- Modal -->
-    <button id="open-btn">Where's our modal</button>
+    <!-- <button id="open-btn">Where's our modal</button> -->
 
     <!-- evything needed -->
-    <div id="modal-container">
+    <!-- <div id="modal-container">
       <div id="modal">
         <p>Here it is</p>
         <div id="close-btn">&times;</div>
       </div>
+    </div> -->
+
+    <!-- Project 3: Accordion -->
+
+    <div class="accordion">
+      <h2 class="accordion-title">FAQ</h2>
+
+      <div class="content-container">
+        <div class="question">What is the return Policy</div>
+        <div class="answer">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero incidunt
+          ducimus, fuga debitis quo laboriosam consequuntur recusandae
+          temporibus ullam iste aliquam inventore asperiores a optio.
+        </div>
+      </div>
+
+      <div class="content-container">
+        <div class="question">What is the return Policy</div>
+        <div class="answer">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero incidunt
+          ducimus, fuga debitis quo laboriosam consequuntur recusandae
+          temporibus ullam iste aliquam inventore asperiores a optio.
+        </div>
+      </div>
+
+      <div class="content-container">
+        <div class="question">What is the return Policy</div>
+        <div class="answer">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero incidunt
+          ducimus, fuga debitis quo laboriosam consequuntur recusandae
+          temporibus ullam iste aliquam inventore asperiores a optio.
+        </div>
+      </div>
     </div>
 
-    
-
-    <script src="/overheard.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
