--- a/project4.html
+++ b/project4.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
     <!-- StyleSheet -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
+
     <!-- Global Font Links -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:ital@1&display=swap"
       rel="stylesheet"
     />
+
     <!-- FontAwesome link -->
     <link
       rel="stylesheet"
