--- a/pur.html
+++ b/pur.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- StyleSheet -->
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <!-- Global Font Links -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,7 +25,7 @@
   </head>
   <body>
     <!-- Project1 : Quote Generator -->
-    <!-- <div class="container">
+    <div class="container">
       <div class="header">
         <h2>Javascript Quote Generator</h2>
       </div>
@@ -42,25 +43,12 @@
           <button id="new-quote">New Quote</button>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- <script src="/script.js"></script> -->
 
-    <!-- Project 2 : Modal -->
-
-    <!-- Modal -->
-    <!-- <button id="open-btn">Where's our modal</button> -->
-
-    <!-- evything needed -->
-    <!-- <div id="modal-container">
-      <div id="modal">
-        <p>Here it is</p>
-        <div id="close-btn">&times;</div>
-      </div>
-    </div> -->
-
     <!-- Project 3: Accordion -->
-
+    <!-- 
     <div class="accordion">
       <h2 class="accordion-title">FAQ</h2>
 
@@ -90,7 +78,7 @@
           temporibus ullam iste aliquam inventore asperiores a optio.
         </div>
       </div>
-    </div>
+    </div> -->
 
     <script src="./index.js"></script>
   </body>
