--- a/project2.html
+++ b/project2.html
@@ -26,28 +26,21 @@
     />
   </head>
   <body>
-    <!-- Project1 : Quote Generator -->
+    <!-- Project 2 : Modal -->
 
-    <div class="container">
-      <div class="header">
-        <h2>Javascript Quote Generator</h2>
-      </div>
+    <!-- Modal Open Button -->
 
-      <div class="main-content">
-        <div class="text-area">
-          <span class="quote">
-            "I do the very best I know how - the very best I can; and I mean to
-            keep on doing so until the end."
-          </span>
-        </div>
-        <div class="person">Abraham Lincoln</div>
+    <button id="open-btn">Where's Our Modal</button>
 
-        <div class="button-area">
-          <button id="new-quote">New Quote</button>
-        </div>
+    <!-- Modal & Modal Background -->
+
+    <div id="modal-container">
+      <div id="modal">
+        <p>Here it is</p>
+        <div id="close-btn">&times;</div>
       </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="./overheard.js"></script>
   </body>
 </html>
